--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ body {
 }
 
 .wrapper {
-    height: 40em;
+    height: 50em;
     background: var(--wrapper-bg);
     border-radius: 30px;
     display: flex;
@@ -81,22 +81,23 @@ nav {
 }
 .logo {
     font-family: "Open Sans", sans-serif;
-    font-size: 1.5em;
+    font-size: 1.3em;
     color: var(--text-color);
     letter-spacing: 5px;
-
+    
 }
 
 .nav-icons {
-    height: 30px;
+    width: 5.5em;
+    height: 2em;
     background-color: var(--product-bg);
     display: inline-block;
     font-size: .7em;
     text-align: center;
-    margin: 0 .7em;
-    padding: .6em .8em;
+    margin: .5em .6em;
+    padding: .2em .8em;
     box-shadow: 2px 1px 5px var(--bg-shadow);
-    border-radius: 30px;
+    border-radius: 20px;
     outline: 1px solid var(--outline-color);
     border: 1px solid var(--outline-color); 
     outline-offset: 0px;
@@ -159,6 +160,7 @@ ul, li, a {
     display: inline-block;
     background-color: var(--product-bg);
     border-radius: 30px;
+    position: relative;
 }
 
 #product-image {
@@ -171,33 +173,39 @@ ul, li, a {
 
 .product-info {
     color: var(--text-color);
-    /* background-color: var(--product-bg-trans); */
-    background-color: white;
-    width: 15em;
-    height: 10em;
-    position: relative;
-    bottom: 35%;
+    background-color: var(--product-bg-trans);
+    width: 12em;
+    height: 8em;
+    position: absolute;
+    z-index: 1;
+    bottom: 0%;
+    left: 0%;
     border-radius:0 30px 0 30px;
     padding: .2em .6em;
     transform: scale(0);
     transition: all 1s ease;
     animation: display-off 1s ease forwards;
-    display: none;
+    
 }
 
 .star {
     display: inline-block;
+    font-size: .8em;
     margin: .2em 0;
+    
 }
 .product-info p {
     margin: .2em;
 }
-/* 
+.product-info h2 {
+    font-size: 1em;
+}
+
 .product-btns {
-    margin: 1em .5em;
+    margin: 0 .3em;
     display: inline-block;
     padding: .4em 1.2em;
-    font-size: .8em;
+    font-size: .7em;
     font-weight: 600;
     border-radius: 30px;
 }
@@ -208,13 +216,13 @@ ul, li, a {
 }
 
 .cart {
-    border: 2px solid var(--text-color);
+    border: 1px solid var(--text-color);
     /* background-color: var(--product-bg-trans); */
     /* color: var(--text-color); */
     animation: outline-animate2 1s ease forwards;
     transition: all 1s ease;
 }
- */
+
 
 h1 {
     width: 10vw;
@@ -228,14 +236,6 @@ p {
     font-size: .7em;
 }
 
-#box-img {
-    width: 6em;
-    object-position: cover;
-    /* position: relative; */
-    /* bottom: 40%; */
-
-}
-
 .info-boxes-wrapper {
     display: flex;
     flex-direction: column;
@@ -247,6 +247,7 @@ p {
     color: var(--text-color);
     border-radius: 25px;
     position: relative;
+    width: 21em;
     padding: 1em;
     animation: items-slide 2s ease forwards;
     transition: all 1s ease;
@@ -259,15 +260,118 @@ p {
 }
 
 .info-box-2 {
-    height: 12em;
+    height: 10em;
     display: flex;
     flex-direction: row;
 }
 
+#box-img {
+    display: inline-block;
+    width: 10em;
+    height: 4em;
+}
+
 .bar {
     margin: 0 1em;
-    width: 6em;
-    height: 6em;
+    width: 12em;
+    height: 8em;
     background: radial-gradient(closest-side, var(--product-bg) 90%, transparent 20% 100% ), conic-gradient(var(--text-color) 55%, var(--vert-hover-color) 90%);
     border-radius: 50%;
+}
+
+.hidden {
+    display: none;
+}
+
+
+/* hover effects, icons animation and navbar animations */
+
+.nav-icons:hover {
+    background-color: var(--hover-color);
+    color: var(--text-color);
+    transform: scale(1.1);
+    box-shadow: 0 0 10px var(--vert-hover-color);
+    outline: 2px solid var(--text-color);
+    outline-offset: 2px;
+    transition: all 1s ease;
+    cursor: pointer;
+    animation: outline-animate 1s ease forwards;
+}
+
+.product-area:hover > .product-info {
+    display: block;
+    animation: display 1s ease forwards;
+    transition: all 1s ease;
+}
+
+#product-image:hover {
+    animation: image-scale 1s ease forwards;
+    transition: all 1s ease;
+}
+
+.price:hover {
+    transform: scale(1.1);
+    /* box-shadow: 0 0 10px var(--vert-hover-color); */
+    outline: 1px solid var(--text-color);
+    outline-offset: 3px;
+    transition: all .5s ease;
+}
+
+.cart:hover {
+    background-color: var(--product-bg);
+    color: var(--text-color);
+    transition: 1s all ease;
+    animation: outline-animate 1s ease forwards;
+    transform: scale(1.1);
+    /* box-shadow: 0 0 10px var(--text-color); */
+    outline: 1px solid var(--text-color);
+    outline-offset: 3px;
+}
+
+@keyframes outline-animate {
+    0% {outline-offset: 0px;}
+    50% {outline-offset: 5px;}
+    100% {outline-offset: 5px; transform: scale(1.1);}
+}
+
+@keyframes outline-animate2 {
+    100% {outline-offset: 0px;}
+    50% {outline-offset: 0px;}
+    0% {outline-offset: 5px; transform: scale(1.0);}
+}
+
+@keyframes display {
+    0% {transform: scale(0);}
+    100% {transform: scale(1);}
+}
+
+
+@keyframes display-off {
+    0% {transform: scale(1); display: none}
+    100% {transform: scale(0); }
+}
+
+@keyframes image-scale {
+    0% {transform: scale(1);}
+    100% {transform: scale(1.05);}
+}
+
+@keyframes image-scale2 {
+    0% {transform: scale(1.05);}
+    100% {transform: scale(1);}
+}
+
+@keyframes window-animate {
+    0% {transform: translateY(-700px) scale(0.1);}
+    100% {transform: translateY(0px);}
+}
+
+@keyframes items-slide {
+    0% {transform: translateX(150px);}
+    100% {transform: translateX(0px) ;}
+}
+
+@keyframes items-slide2 {
+    0% {transform: translateX(-150px);}
+    100% {transform: translateX(0px) ;}
 }
