--- a/style.css
+++ b/style.css
@@ -109,13 +109,13 @@ ul, li, a {
     list-style-type: none;
     text-decoration: none;
     color: var(--text-color);
+    cursor: pointer;
 }
 
 .vertical-nav-container {
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 100%;
     justify-content: space-around;
     
 }
@@ -124,7 +124,7 @@ ul, li, a {
 .vertical-navbar {
     background-color: var(--vert-nav-bg);
     width: 3em;
-    max-height: 74vh;
+    height: 50em;
     border-radius: 30px;
     display: inline-block;
     margin: .5em;
@@ -341,6 +341,17 @@ p {
     animation: outline-animate 1s ease forwards;
 }
 
+#vert-icons:hover {
+    transform: scale(1.3);
+    /* padding: .05em 0; */
+    text-align: center;
+    width: 45px;
+    /* width: 90px; */
+    transition: all .5s ease;
+    background-color: var(--vert-hover-color);
+    /* border-radius: 10px; */
+}
+
 .product-area:hover > .product-info {
     display: block;
     animation: display 1s ease forwards;
@@ -431,18 +442,23 @@ p {
         
     }   
     nav {
-        margin:0 5em;
+        margin:0 4em;
     }
     .logo {
         margin-left: 2em;
+        font-size: 1.5em;
     }
 
     .vertical-navbar {
-        /* display: block; */
-        height: 47em;
+        display: block;
+        height: 33.5em;
+        margin-left: 1em;
+    }
+    .vertical-nav-container {
+        height: 100%;
     }
     .product-area {
-        width: 37em;
+        width: 32.5em;
         max-width: 100%;
         height: 30em;
         min-width: 20em;
@@ -465,7 +481,7 @@ p {
         margin-right: 1em;
     }
     .info-box-2 {
-        width: 23em;
+        width: 18.5em;
         height: 12em;
         flex-direction: row;
         margin-right: 1em;
@@ -480,5 +496,28 @@ p {
         width: 39em;
         height: 30em;
     }
+    .product-info {
+        width: 17em;
+        height: 10em;
+    }
+    .star {
+    display: inline-block;
+    font-size: 1em;
+    /* margin-top: .5em 0; */
     
+    }
+    .product-info p {
+    margin: 1em .5em;
+    }
+    .product-info h2 {
+    font-size: 1em;
+    margin: .5em;
+    }
+    .product-btns {
+    margin: 0 .5em;
+    padding: .4em 1.2em;
+    font-size: .8em;
+    font-weight: 600;
+    border-radius: 30px;
+}
 }
