--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
     --vert-nav-bg: #020203;
     --dark-mode-text: #020203;
     --dark-mode-bg: #f9f9f6;
-    --bg-gradient-1: linear-gradient(90deg, rgb(40, 40, 40) 0%, rgba(71, 71, 68, 1) 100%);
+    --bg-gradient-1: linear-gradient(90deg, rgb(68, 66, 66) 0%, rgba(71, 71, 68, 1) 100%);
     --bg-gradient-2: linear-gradient(90deg, #373333  20%, #63625f 80%);
 
 }
@@ -26,7 +26,7 @@
     --vert-hover-color: #f9f6f6;
     --dark-mode-text: #f9f9f9;
     --dark-mode-bg: #020203;
-    --bg-gradient-1: linear-gradient(90deg, rgb(97, 93, 93) 0%, rgb(92, 92, 85) 100%);
+    --bg-gradient-1: linear-gradient(90deg, rgb(11, 10, 10) 0%, rgb(92, 92, 85) 100%);
     --bg-gradient-2: linear-gradient(90deg, #464141  20%, #626261 80%);
 } 
 
@@ -239,7 +239,7 @@ p {
 .info-boxes-wrapper {
     display: flex;
     flex-direction: column;
-    /* margin: 1em 0; */
+    margin: 1em 0;
 }
 
 .info-boxes {
@@ -567,7 +567,13 @@ p {
         height: 6em;
         margin-bottom: 1em;
     }
-    
+    #box-img {
+        width: 8em;
+    }
+    .nav-icons {
+        height: 2.5em;
+        padding: .5em;
+    }
 
 
 }
